--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+body {
+    padding-bottom: 20px;
+  }
+  
+  .navbar {
+    margin-bottom: 20px;
+  }
+  
 body{
     background-color: rgb(247, 238, 238);
 }
